--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Productos</title>
+    <title>Product Catalog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Catálogo de Productos</h1>
+        <h1>Product Catalog</h1>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search products...">
-            <button id="searchButton">Buscar</button>
+            <button id="searchButton">Search</button>
         </div>
     </header>
     <main>
         <div id="productGrid"></div>
         <div class="pagination">
-            <button id="prevButton">Anterior</button>
+            <button id="prevButton">Previous</button>
             <span id="pageInfo"></span>
-            <button id="nextButton">Siguiente</button>
+            <button id="nextButton">Next</button>
         </div>
     </main>
     <script src="script.js"></script>
