--- a/Ordenes/index.html
+++ b/Ordenes/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Catalog</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -12,6 +13,10 @@
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search products...">
             <button id="searchButton">Search</button>
+        </div>
+        <br>
+        <div class="cart-container">
+            <a href="cart.html" id="cartButton"><i class="fas fa-shopping-cart"></i> Go to Cart</a>
         </div>
     </header>
     <main>
