--- a/Ordenes/cart.html
+++ b/Ordenes/cart.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Carrito de compras</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Shopping Cart</h1>
+        <h1>Carrito de compras</h1>
         <div class="cart-container">
-            <button id="generateOrderButton">Generate Order</button>
+            <button id="generateOrderButton">Generar Orden</button>
         </div>
     </header>
     <main>
