--- a/Ordenes/index.html
+++ b/Ordenes/index.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Catalog</title>
+    <title>Catálogo de productos</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Product Catalog</h1>
+        <h1>Catálogo de productos</h1>
         <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search products...">
-            <button id="searchButton">Search</button>
+            <input type="text" id="searchInput" placeholder="Buscar productos...">
+            <button id="searchButton">Buscar</button>
         </div>
         <br>
         <div class="cart-container">
-            <a href="cart.html" id="cartButton"><i class="fas fa-shopping-cart"></i> Go to Cart</a>
+            <a href="cart.html" id="cartButton"><i class="fas fa-shopping-cart"></i> Ir al Carrito</a>
         </div>
     </header>
     <main>
         <div id="productGrid"></div>
         <div class="pagination">
-            <button id="prevButton">Previous</button>
+            <button id="prevButton">Anterior</button>
             <span id="pageInfo"></span>
-            <button id="nextButton">Next</button>
+            <button id="nextButton">Siguiente</button>
         </div>
     </main>
     <script src="script.js"></script>
